--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100vh;
     background: violet;
-    background-image: url('..\img\16.jpg');
+    background-image: url('../img/16.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,6 +21,11 @@ body {
     border-radius: 14px;
     border: 3px solid black;
     box-shadow: 0px 6px 20px #9c75ee, 0px 51px 69px rgb(23 18 43 / 59%);
+}
+
+.inline-form {
+    display: flex;
+    gap: 10px;
 }
 
 .submit-btn {
